Heading alignment fix

--- a/versions/v4/static/scss/_views-front-page.scss
+++ b/versions/v4/static/scss/_views-front-page.scss
@@ -470,6 +470,7 @@
 
   @media (min-width: $screen-sm-min) {
     border-bottom: 1px solid $gray-light-alt;
+    margin-top: 15px;
     padding-bottom: 10px;
   }
 }
